restructured h1-6 to match accessibility standards

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="dist/style.css">
+  <link rel="stylesheet" href="dist/style.min.css">
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
@@ -365,7 +365,7 @@
 
     <section class="btc">
       <div class="container flex flex-col gap--sm">
-        <h6 class="btc__subheading">Focusing On Bitcoin</h6>
+        <h2 class="btc__subheading">Focusing On Bitcoin</h2>
         <div class="flex gap--md ai-c">
           <svg width="71" height="72" viewBox="0 0 71 72" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
@@ -376,7 +376,7 @@
               d="M43.2334 39.0397C45.4482 39.1675 47.3998 38.2674 48.611 35.59C50.2714 31.9341 47.9142 29.0258 44.2836 26.489L47.0544 21.688L44.0936 19.9786L41.394 24.6524C40.615 24.2026 39.8121 23.7592 39.0126 23.3185L41.7293 18.615L38.7713 16.9068L35.9998 21.7059C35.3512 21.3487 34.7146 20.9975 34.0998 20.6425L34.108 20.6283L30.025 18.2688L28.2239 21.3895C28.2239 21.3895 30.4339 22.6113 30.3751 22.6299C31.5735 23.3229 31.5682 24.2361 31.3383 24.8943L28.1818 30.3637L23.7466 38.0456C23.4789 38.3874 22.9134 38.854 22.0745 38.3711C22.0935 38.4263 19.9208 37.1272 19.9208 37.1272L17.319 40.2775L21.1715 42.5017C21.8888 42.917 22.5878 43.3352 23.2766 43.7402L20.4762 48.5965L23.4332 50.3049L26.206 45.5004C27.0102 45.9865 27.7915 46.447 28.5592 46.889L25.7977 51.67L28.7585 53.3794L31.5585 48.5336C36.6983 51.1248 40.897 51.8988 43.9939 47.5352C46.4886 44.0228 45.674 41.3424 43.2352 39.0412L43.2334 39.0397ZM37.1005 26.7949C38.7704 27.759 44.3253 30.2662 42.3379 33.7101C40.4312 37.0109 35.4038 33.5941 33.7322 32.629L37.1002 26.7955L37.1005 26.7949ZM28.3158 42.0062L32.031 35.5743C34.0376 36.7321 40.6593 39.796 38.475 43.5812C36.3816 47.2113 30.3251 43.1636 28.3166 42.0065L28.3158 42.0062Z"
               fill="#307FE2" />
           </svg>
-          <h4 class="btc__heading">Setting a new standard for crypto mining</h4>
+          <h3 class="btc__heading">Setting a new standard for crypto mining</h3>
         </div>
         <p class="btc__body">
           Lorem ipsum dolor sit amet, consectetur aipiscing elit. Laculis id eleifend volutpat faucibus. Imperdiet
@@ -439,9 +439,9 @@
           <div class="app__text flex flex-col gap--lg">
             <div class="flex ai-c gap--sm">
               <img class="icon--md" src="images/icons/icon_filter.svg" alt="">
-              <h6 class="app__subheading">Fully Control & Automations</h6>
+              <h2 class="app__subheading">Fully Control & Automations</h2>
             </div>
-            <h4 class="app__heading">Configure your Minipods with our smooth, easy-to-use, brand new UI.</h4>
+            <h3 class="app__heading">Configure your Minipods with our smooth, easy-to-use, brand new UI.</h3>
             <p class="app__body--light">One of the greatest strengths of the Minipod is the <span
                 class="text--emphasis text--light-blue">
                 Smart Power Distribution
@@ -462,10 +462,10 @@
           <div class="app__text flex flex-col gap--lg">
             <div class="flex ai-c gap--sm">
               <img class="icon--md" src="images/icons/icon_monitor.svg" alt="">
-              <h6 class="app__subheading app__subheading--blue">Monitor everything, anywhere, anytime</h6>
+              <h2 class="app__subheading app__subheading--blue">Monitor everything, anywhere, anytime</h2>
             </div>
-            <h4 class="app__heading app__heading--dark-blue">Analyze your Minipod in real time from wherever you are.
-            </h4>
+            <h3 class="app__heading app__heading--dark-blue">Analyze your Minipod in real time from wherever you are.
+            </h3>
             <p class="app__body--dark">
               To ensure maximum efficiency and profit, we provide <span class="text--emphasis text--blue">real-time
                 data</span> for you to monitor every event that
@@ -494,9 +494,9 @@
           <div class="app__text flex flex-col gap--lg">
             <div class="flex ai-c gap--sm">
               <img class="icon--md" src="images/icons/icon_alerts.svg" alt="">
-              <h6 class="app__subheading">Receive Notifications & Alerts</h6>
+              <h2 class="app__subheading">Receive Notifications & Alerts</h2>
             </div>
-            <h4 class="app__heading">Set up notifications and your Minipod will provide vital event alerts.</h4>
+            <h3 class="app__heading">Set up notifications and your Minipod will provide vital event alerts.</h3>
             <p class="app__body--light">We understand how important it is to stay up to date with everything important
               that occurs with your Minipod and your miners. <span class="text--emphasis text--light-blue">Receive
                 simple and clear emails</span> when such events happen.
@@ -515,7 +515,7 @@
 
     <section class="testimonials">
       <div class="container">
-        <h6 class="testimonials__subheading">Customer Testimonials</h6>
+        <h2 class="testimonials__subheading">Customer Testimonials</h2>
         <div class="flex gap--md ai-b mtop--md">
           <svg class="testimonials__icon" width="88" height="81" viewBox="0 0 88 81" fill="none"
             xmlns="http://www.w3.org/2000/svg">
@@ -544,7 +544,7 @@
               d="M32 62C32 55.3726 37.3726 50 44 50C50.6274 50 56 55.3726 56 62V70C56 72.2091 54.2091 74 52 74H36C33.7909 74 32 72.2091 32 70V62Z"
               fill="#307FE2" />
           </svg>
-          <h2 class="testimonials__heading">What our clients say about us</h2>
+          <h3 class="testimonials__heading">What our clients say about us</h3>
         </div>
         <ul onmouseover="showChatBubble()" onmouseleave="hideChatBubble()" class="testimonials__list">
           <li class="testimonials__list-item">
@@ -555,11 +555,12 @@
             <div class="flex gap--md ai-c">
               <img class="icon--md" src="images/icons/icon_sample-logo-1.svg" alt="" class="list-item__icon">
               <div class="flex flex-col">
-                <h5 class="list-item__heading">Austin</h5>
-                <span class="list-item__subheading">from Genesis Digital Assets</span>
+                <h4 class="list-item__heading">Austin</h4>
+                <small class="list-item__subheading">from Genesis Digital Assets</small>
               </div>
             </div>
           </li>
+
           <li class="testimonials__list-item">
             <p class="list-item__body">
               “Digital Shovel lets us focus more on acquisitions while they help us manage the day to day operations.”
@@ -568,11 +569,12 @@
             <div class="flex gap--md ai-c">
               <img class="icon--md" src="images/icons/icon_sample-logo-1.svg" alt="" class="list-item__icon">
               <div class="flex flex-col">
-                <h5 class="list-item__heading">Austin</h5>
-                <span class="list-item__subheading">from Genesis Digital Assets</span>
+                <h4 class="list-item__heading">Austin</h4>
+                <small class="list-item__subheading">from Genesis Digital Assets</small>
               </div>
             </div>
           </li>
+
           <li class="testimonials__list-item">
             <p class="list-item__body">
               “Digital Shovel lets us focus more on acquisitions while they help us manage the day to day operations.”
@@ -581,11 +583,12 @@
             <div class="flex gap--md ai-c">
               <img class="icon--md" src="images/icons/icon_sample-logo-1.svg" alt="" class="list-item__icon">
               <div class="flex flex-col">
-                <h5 class="list-item__heading">Austin</h5>
-                <span class="list-item__subheading">from Genesis Digital Assets</span>
+                <h4 class="list-item__heading">Austin</h4>
+                <small class="list-item__subheading">from Genesis Digital Assets</small>
               </div>
             </div>
           </li>
+
           <li class="testimonials__list-item">
             <p class="list-item__body">
               “Digital Shovel lets us focus more on acquisitions while they help us manage the day to day operations.”
@@ -594,34 +597,8 @@
             <div class="flex gap--md ai-c">
               <img class="icon--md" src="images/icons/icon_sample-logo-1.svg" alt="" class="list-item__icon">
               <div class="flex flex-col">
-                <h5 class="list-item__heading">Austin</h5>
-                <span class="list-item__subheading">from Genesis Digital Assets</span>
-              </div>
-            </div>
-          </li>
-          <li class="testimonials__list-item">
-            <p class="list-item__body">
-              “Digital Shovel lets us focus more on acquisitions while they help us manage the day to day operations.”
-            </p>
-            <div class="list-item__divider"></div>
-            <div class="flex gap--md ai-c">
-              <img class="icon--md" src="images/icons/icon_sample-logo-1.svg" alt="" class="list-item__icon">
-              <div class="flex flex-col">
-                <h5 class="list-item__heading">Austin</h5>
-                <span class="list-item__subheading">from Genesis Digital Assets</span>
-              </div>
-            </div>
-          </li>
-          <li class="testimonials__list-item">
-            <p class="list-item__body">
-              “Digital Shovel lets us focus more on acquisitions while they help us manage the day to day operations.”
-            </p>
-            <div class="list-item__divider"></div>
-            <div class="flex gap--md ai-c">
-              <img class="icon--md" src="images/icons/icon_sample-logo-1.svg" alt="" class="list-item__icon">
-              <div class="flex flex-col">
-                <h5 class="list-item__heading">Austin</h5>
-                <span class="list-item__subheading">from Genesis Digital Assets</span>
+                <h4 class="list-item__heading">Austin</h4>
+                <small class="list-item__subheading">from Genesis Digital Assets</small>
               </div>
             </div>
           </li>
@@ -632,16 +609,16 @@
     <section class="stats container stats__container flex flex-col gap--md">
       <ul class="stats__list flex jc-sb">
         <li class="stats__list-item">
-          <h1 class="list-item__heading">400+</h1>
-          <h6 class="list-item__subheading">Minipods Sold</h6>
+          <h2 class="list-item__heading">400+</h2>
+          <span class="list-item__subheading">Minipods Sold</span>
         </li>
         <li class="stats__list-item">
-          <h1 class="list-item__heading">60+</h1>
-          <h6 class="list-item__subheading">Reoccuring Clients</h6>
+          <h2 class="list-item__heading">60+</h2>
+          <span class="list-item__subheading">Reoccuring Clients</span>
         </li>
         <li class="stats__list-item">
-          <h1 class="list-item__heading">4+</h1>
-          <h6 class="list-item__subheading">Years of Experience</h6>
+          <h2 class="list-item__heading">4+</h2>
+          <span class="list-item__subheading">Years of Experience</span>
         </li>
       </ul>
     </section>
@@ -739,9 +716,9 @@
             fill="#CCE3FF" />
         </svg>
         <div class="flex flex-col gap--md jc-c">
-          <h6 class="income__subheading">From your power supply to your Minipod and, finally, in your crypto wallet.
-          </h6>
-          <h1 class="income__heading">PLUG & PLAY<br><span class="income__passive">PASSIVE INCOME</span></h1>
+          <p class="income__body">From your power supply to your Minipod and, finally, in your crypto wallet.
+          </p>
+          <h2 class="income__heading">PLUG & PLAY<br><span class="income__passive">PASSIVE INCOME</span></h2>
         </div>
         <a href="products-minipod.html" onmouseenter="plugIn()" onmouseleave="plugOut()"
           class="income__btn btn btn--primary">Get Started
@@ -769,24 +746,24 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <a href="products-minipod.html" class="footer__list-item">Minipod</a>
-            <a href="" class="footer__list-item">Power Supply</a>
+            <li><a href="products-minipod.html" class="footer__list-item">Minipod</a></li>
+            <li><a href="" class="footer__list-item">Power Supply</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
-            <a href="products-minipod.html" class="footer__list-item">Products</a>
-            <a href="team.html" class="footer__list-item">Team</a>
-            <a href="merch.html" class="footer__list-item">Merch</a>
-            <a href="faq.html" class="footer__list-item">Faq</a>
-            <a href="contact.html" class="footer__list-item">Contact</a>
+            <li><a href="products-minipod.html" class="footer__list-item">Products</a></li>
+            <li><a href="team.html" class="footer__list-item">Team</a></li>
+            <li><a href="merch.html" class="footer__list-item">Merch</a></li>
+            <li><a href="faq.html" class="footer__list-item">Faq</a></li>
+            <li><a href="contact.html" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Company</small>
           <ul class="footer__list">
-            <a href="team.html" class="footer__list-item">Careers</a>
+            <li><a href="team.html" class="footer__list-item">Careers</a></li>
           </ul>
         </div>
       </div>
@@ -798,8 +775,8 @@
           <small class="footer__copyright">Privacy Policy & Disclaimer</small>
         </div>
         <div class="flex gap--sm ai-c">
-          <img class="icon--sm" class="footer__social" src="images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
-          <img class="icon--sm" class="footer__social" src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
+          <img class="footer__social" src="images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
+          <img class="footer__social" src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
         </div>
       </div>
     </div>
