--- a/team.html
+++ b/team.html
@@ -5,19 +5,23 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
+  <meta name="description"
+    content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="dist/style.css">
+  <link rel="stylesheet" href="dist/style.min.css">
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 
   <!-- Google Font -->
-  <link rel="preconnect" href="https://fonts.googleapis.comz">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+    media="print" onload="this.media='all'" rel="stylesheet">
+  <noscript>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet">
+  </noscript>
 
   <title>Digital Shovel - Team</title>
 </head>
@@ -285,7 +289,8 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Hugo Rodrigues">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png"
+              alt="Headshot Photograph of Hugo Rodrigues">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Hugo Rodrigues</h6>
               <small>Electronics Designer</small>
@@ -294,7 +299,8 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Noah Chuyu Zhou">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png"
+              alt="Headshot Photograph of Noah Chuyu Zhou">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Noah Chuyu Zhou</h6>
               <small>Electronics Designer</small>
@@ -303,7 +309,8 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Prasanth Shunmugam">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png"
+              alt="Headshot Photograph of Prasanth Shunmugam">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Prasanth Shunmugam</h6>
               <small>Manufacturing / Design Engineer</small>
@@ -312,7 +319,8 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Hyeseong Choi">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png"
+              alt="Headshot Photograph of Hyeseong Choi">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Hyeseong Choi</h6>
               <small>Robotics Engineer</small>
@@ -330,7 +338,8 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Vahid Mahmoodi">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png"
+              alt="Headshot Photograph of Vahid Mahmoodi">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Vahid Mahmoodi</h6>
               <small>FEA / CFD Engineer</small>
@@ -348,7 +357,8 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Mark Kamukama">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png"
+              alt="Headshot Photograph of Mark Kamukama">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Mark Kamukama</h6>
               <small>Mechanical Design Engineer</small>
@@ -394,7 +404,8 @@
         <h5 class="team__title team__title--add-line">Design & Development</h5>
         <ul class="team__list flex flex-col gap--md">
           <li class="team__list-member flex gap--sm">
-            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Nicholas Panayotakos">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png"
+              alt="Headshot Photograph of Nicholas Panayotakos">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Nicholas Panayotakos</h6>
               <small>UI / UX Design & Frontend Developer</small>
@@ -427,7 +438,8 @@
         <h5 class="team__title">Product Team Leaders</h5>
         <ul class="team__list flex flex-col gap--md">
           <li class="team__list-member flex gap--sm">
-            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Vishal Monpara">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png"
+              alt="Headshot Photograph of Vishal Monpara">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Vishal Monpara</h6>
               <small>PDU Team Leader</small>
@@ -436,7 +448,8 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Amanpreet Singh">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png"
+              alt="Headshot Photograph of Amanpreet Singh">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Amanpreet Singh</h6>
               <small>Assembly Team Leader</small>
@@ -445,7 +458,8 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Tirlochan Singh">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png"
+              alt="Headshot Photograph of Tirlochan Singh">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Tirlochan Singh</h6>
               <small>Switchgear Team Leader</small>
@@ -454,7 +468,8 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Deepak Sharma">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png"
+              alt="Headshot Photograph of Deepak Sharma">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Deepak Sharma</h6>
               <small>Evening Shop Supervisor</small>
@@ -463,7 +478,8 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Austin Cairns">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png"
+              alt="Headshot Photograph of Austin Cairns">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Austin Cairns</h6>
               <small>Welding Supervisor</small>
@@ -472,7 +488,8 @@
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Brian MacLean">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png"
+              alt="Headshot Photograph of Brian MacLean">
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Brian MacLean</h6>
               <small>Shop Supervisor</small>
@@ -643,24 +660,24 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <a href="products-minipod.html" class="footer__list-item">Minipod</a>
-            <a href="" class="footer__list-item">Power Supply</a>
+            <li><a href="products-minipod.html" class="footer__list-item">Minipod</a></li>
+            <li><a href="" class="footer__list-item">Power Supply</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
-            <a href="products-minipod.html" class="footer__list-item">Products</a>
-            <a href="team.html" class="footer__list-item">Team</a>
-            <a href="merch.html" class="footer__list-item">Merch</a>
-            <a href="faq.html" class="footer__list-item">Faq</a>
-            <a href="contact.html" class="footer__list-item">Contact</a>
+            <li><a href="products-minipod.html" class="footer__list-item">Products</a></li>
+            <li><a href="team.html" class="footer__list-item">Team</a></li>
+            <li><a href="merch.html" class="footer__list-item">Merch</a></li>
+            <li><a href="faq.html" class="footer__list-item">Faq</a></li>
+            <li><a href="contact.html" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Company</small>
           <ul class="footer__list">
-            <a href="team.html" class="footer__list-item">Careers</a>
+            <li><a href="team.html" class="footer__list-item">Careers</a></li>
           </ul>
         </div>
       </div>
