--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="dist/style.css">
+  <link rel="stylesheet" href="dist/style.min.css">
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
@@ -262,24 +262,24 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <a href="products-minipod.html" class="footer__list-item">Minipod</a>
-            <a href="" class="footer__list-item">Power Supply</a>
+            <li><a href="products-minipod.html" class="footer__list-item">Minipod</a></li>
+            <li><a href="" class="footer__list-item">Power Supply</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
-            <a href="products-minipod.html" class="footer__list-item">Products</a>
-            <a href="team.html" class="footer__list-item">Team</a>
-            <a href="merch.html" class="footer__list-item">Merch</a>
-            <a href="faq.html" class="footer__list-item">Faq</a>
-            <a href="contact.html" class="footer__list-item">Contact</a>
+            <li><a href="products-minipod.html" class="footer__list-item">Products</a></li>
+            <li><a href="team.html" class="footer__list-item">Team</a></li>
+            <li><a href="merch.html" class="footer__list-item">Merch</a></li>
+            <li><a href="faq.html" class="footer__list-item">Faq</a></li>
+            <li><a href="contact.html" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Company</small>
           <ul class="footer__list">
-            <a href="team.html" class="footer__list-item">Careers</a>
+            <li><a href="team.html" class="footer__list-item">Careers</a></li>
           </ul>
         </div>
       </div>
