--- a/products-minipod.html
+++ b/products-minipod.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="dist/style.css">
+  <link rel="stylesheet" href="dist/style.min.css">
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
@@ -812,24 +812,24 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <a href="products-minipod.html" class="footer__list-item">Minipod</a>
-            <a href="" class="footer__list-item">Power Supply</a>
+            <li><a href="products-minipod.html" class="footer__list-item">Minipod</a></li>
+            <li><a href="" class="footer__list-item">Power Supply</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
-            <a href="products-minipod.html" class="footer__list-item">Products</a>
-            <a href="team.html" class="footer__list-item">Team</a>
-            <a href="merch.html" class="footer__list-item">Merch</a>
-            <a href="faq.html" class="footer__list-item">Faq</a>
-            <a href="contact.html" class="footer__list-item">Contact</a>
+            <li><a href="products-minipod.html" class="footer__list-item">Products</a></li>
+            <li><a href="team.html" class="footer__list-item">Team</a></li>
+            <li><a href="merch.html" class="footer__list-item">Merch</a></li>
+            <li><a href="faq.html" class="footer__list-item">Faq</a></li>
+            <li><a href="contact.html" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Company</small>
           <ul class="footer__list">
-            <a href="team.html" class="footer__list-item">Careers</a>
+            <li><a href="team.html" class="footer__list-item">Careers</a></li>
           </ul>
         </div>
       </div>
