fixed SEO links for mobile menu and footer logo

--- a/team.html
+++ b/team.html
@@ -105,7 +105,7 @@
         </svg>
       </a>
 
-      <a class="navbar__hamburger">
+      <a href="home.html" class="navbar__hamburger">
         <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M18 9H4" />
           <path d="M18 13H4" />
@@ -651,7 +651,7 @@
     <div class="container footer__container">
       <div class="flex jc-sb">
         <div class="footer__column">
-          <a href="#"><img class="footer__logo" src="images/icons/icon_logo-white.svg" alt="Digital Shovel Logo" /></a>
+          <a href="home.html"><img class="footer__logo" src="images/icons/icon_logo-white.svg" alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
             Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
             cost, and high security, we help businesses with managed and unmanaged miner hosting.
