--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
             <li><a href="products-minipod.html" class="footer__list-item">Minipod</a></li>
-            <li><a href="" class="footer__list-item">Power Supply</a></li>
+            <li><a href="products-minipod.html" class="footer__list-item">Power Supply</a></li>
           </ul>
         </div>
         <div class="footer__column">
