optimized google fonts loading and fixed tooltips

--- a/faq.html
+++ b/faq.html
@@ -14,10 +14,13 @@
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 
   <!-- Google Font -->
-  <link rel="preconnect" href="https://fonts.googleapis.comz">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+    media="print" onload="this.media='all'" rel="stylesheet">
+  <noscript>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet">
+  </noscript>
 
   <!-- Javascript -->
   <script defer src="/app/js/faq.js"></script>
